fix mobile text align

--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ footer {
     }
     #leftright img {
         width: 300px;
-        height:300px;
+        height:auto;
     }
     .left,.right {
         flex-direction: column;
@@ -219,6 +219,9 @@ footer {
     .left div, .right div {
         width: 280px;
         padding:10px;
+    }
+    .right div{
+        text-align: left;
     }
     
 }
